video/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-app
  namespace: video-app
spec:
  selector:
    app: video-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
