video/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: video-app-ingress
  namespace: video-app
spec:
  ingressClassName: nginx
  tls:
  - secretName: video-app-secret
  rules:
  - host: dev.video.kyungsu.com
    http:
      paths:
      - backend:
          service:
            name: video-app
            port:
              number: 8081
        path: /
        pathType: Prefix
